--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.1.1",
     "crypto-js": "^4.1.1",
     "js-chacha20": "^1.1.0",
+    "pako": "^2.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-modal": "^3.16.1",
