--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,23 @@
       "default_title": "Common client app"
   },
   "permissions": [
-      "activeTab"
+    "activeTab",
+    "tabs"
    ],
    "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://*/*", "http://*/*"],
+      "run_at": "document_start",
+      "js": ["content.js"]
+    }
+  ]
 }
