--- a/package.json
+++ b/package.json
@@ -17,21 +17,25 @@
     "@polkadot/util": "^10.1.10",
     "@polkadot/util-crypto": "^10.1.10",
     "@reduxjs/toolkit": "^1.8.6",
+    "@testing-library/dom": "^8.20.0",
     "@types/crypto-js": "^4.1.1",
     "bn.js": "^5.2.0",
     "clsx": "^1.1.1",
     "crypto-js": "^4.1.1",
     "js-chacha20": "^1.1.0",
     "pako": "^2.1.0",
+    "parse-domain": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
     "redux-logger": "^3.0.6",
-    "reseter.css": "^2.0.0"
+    "reseter.css": "^2.0.0",
+    "unique-selector": "^0.5.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@types/chrome": "^0.0.212",
     "@types/node": "^18.8.5",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
